搜索引擎相关文档及部分搜索功能修改
